# lmdeploy

./: CMakeLists.txt  generate.sh  requirements.txt  zstart.sh
benchmark/: profile_generation.py
cmake/Modules/: FindCUDNN.cmake  FindNCCL.cmake
examples/cpp/llama/: llama_triton_example.cc
lmdeploy/pytorch/backends/cuda/: moe.py  token_dispatcher.py
lmdeploy/pytorch/models/: deepseek_v2.py
lmdeploy/pytorch/models/utils/: microbatch.py
lmdeploy/turbomind/: turbomind.py
src/turbomind/: CMakeLists.txt
src/turbomind/kernels/: custom_ar_kernels.h
src/turbomind/layers/: BaseLayer.h  CMakeLists.txt  DenseWeight.h  DynamicDecodeBaseLayer.h  DynamicDecodeLayer.cc  DynamicDecodeLayer.h
src/turbomind/layers/attention_layers/: BaseAttentionLayer.h
src/turbomind/layers/sampling_layers/: BaseSamplingLayer.cc  BaseSamplingLayer.h  CMakeLists.txt  TopKSamplingLayer.cc  TopKSamplingLayer.h  TopPSamplingLayer.cc  TopPSamplingLayer.h
src/turbomind/models/llama/: CMakeLists.txt  LlamaBatch.cc  LlamaBatch.h  LlamaCacheManager.cc  LlamaCacheManager.h  LlamaContextDecoder.cc  LlamaContextDecoder.h  LlamaDecoder.cc  LlamaDecoder.h  LlamaDecoderLayerWeight.cc  LlamaLinear.h  LlamaNcclGuard.h  LlamaV2.cc  LlamaV2.h  LlamaWeight.cc  llama_gemm.cc  llama_utils.cc  llama_utils.h
src/turbomind/python/: CMakeLists.txt  bind.cpp
src/turbomind/runtime/: CMakeLists.txt  rthelper.h
src/turbomind/runtime/core/: DIPIRawGeneratorImpl.cpp  DIPURawGeneratorImpl.cpp  DIPURawGeneratorImpl.h
src/turbomind/runtime/device/: basedef.h  rawdeviceapis.h  rawdiclapis.h
src/turbomind/runtime/diopirt/: diopi_helper.cpp  diopirt_impl.cpp  diopirt_impl.h
src/turbomind/triton_backend/: CMakeLists.txt  libfastertransformer.cc  transformer_triton_backend.cpp  transformer_triton_backend.hpp  triton_utils.hpp
src/turbomind/triton_backend/llama/: CMakeLists.txt  LlamaTritonModel.cc  LlamaTritonModel.h  LlamaTritonModelInstance.cc  LlamaTritonModelInstance.h
src/turbomind/utils/: CMakeLists.txt  Tensor.cc  Tensor.h  allocator.h  cublasFP8MMWrapper.cu  cuda_utils.cc  cuda_utils.h  custom_ar_comm.h  indexablelist.h  logger.cc  memory_utils.cc  memory_utils.cu  memory_utils.h  nccl_utils.cc  nccl_utils.h
tests/csrc/int8_gemm/: int8_gemm_test.cu
